--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class='bar_group__bar thin' label='Angular 5' value='350'></div>
 						<div class='bar_group__bar thin' label='Spring Boot' value='350'></div>	
 						<div class='bar_group__bar thin' label='MySql' value='430'></div>
+						<div class='bar_group__bar thin' label='Git' value='300'></div>
 				</div>
 					</div>
 					<div class='clear'></div>
