--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			</form>
 			<h5 class="sub">Looking for Address</h5>
 			<p><span>Location</span> : Chennai</p>
+			<p><span>Contact</span> : +91-9944940454</p>
 			<p><span>Email</span><a href="mailto:Shree.Soundharya@cognizant.com"> : Shree.Soundharya@cognizant.com</a></p>
 			<div class="social-icons animated wow bounceInDown" data-wow-duration="1000ms" data-wow-delay="800ms">
 					<ul class="top-links">
