--- a/index.html
+++ b/index.html
@@ -97,6 +97,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li>: Coimbatore,TN,India</li>
 							</ul>
 						</li>
+				                <li>
+							<ul class="address-text">
+								<li><b>CONTACT</b></li>
+								<li>: +91-9944940454</li>
+							</ul>
+						</li>
 						<li>
 							<ul class="address-text">
 								<li><b>E-MAIL </b></li>
