--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class='bar_group__bar thin' label='Spring Boot' value='350'></div>	
 						<div class='bar_group__bar thin' label='MySql' value='430'></div>
 						<div class='bar_group__bar thin' label='Git' value='300'></div>
+						  <div class='bar_group__bar thin' label='Scrum' value='100'></div>
+						  
 				</div>
 					</div>
 					<div class='clear'></div>
